==================== 2.25.4 ====================

==================== 2.25.3 ====================

2008-12-12  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (crtc_assignment_new):
	* gnome-rr.c: (gnome_rr_crtc_set_config): fix translator comments, to
	really fix bug #563831.

2008-12-10  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (has_similar_mode): kill since it's unused and
	creates a warning

2008-12-10  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (crtc_assignment_new):
	* gnome-rr.c: (gnome_rr_crtc_set_config):
	Fix build, thanks to Frederic Peters <fpeters@0d.be> for the quick
	notice. Fix bug #563926 and bug #563927.

2008-12-09  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=563831

	* gnome-rr.c (gnome_rr_crtc_set_config): Make an error string more
	friendly to translation.

	* gnome-rr-config.c (crtc_assignment_new): Likewise.

2008-12-05  Vincent Untz  <vuntz@gnome.org>

	* gnome-bg.c: (get_current_slide): add assertion
	(read_slideshow_file): if there are no slides in the slideshow, do as
	if there were no slideshow at all.
	Should fix bug #522756.

2008-10-16  Federico Mena Quintero  <federico@novell.com>

	Add error reporting to the GnomeRR API.

	* libgnomeui/gnome-rr.h (GnomeRRError): New enum with error codes
	for the GnomeRR API.

	* gnome-rr.c (gnome_rr_error_quark): New public function.

2008-12-02  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (handle_start_element), (outputs_free):
	* gnome-rr.c: (output_free): plug leaks.
	Patch by Matthias Clasen <mclasen@redhat.com>
	Fix bug #549960.

==================== 2.25.2 ====================

2008-12-01  Vincent Untz  <vuntz@gnome.org>

	* gnome-desktop-thumbnail.c:
	(gnome_desktop_thumbnail_factory_generate_thumbnail): fix crash
	tempfile cannot be created, and plug leak. Fix bug #562003.

2008-12-01  Vincent Untz  <vuntz@gnome.org>

	* gnome-bg.c: (gnome_bg_finalize): clean previous patch
