@@ -1,3 +1,9 @@
+2009-01-07  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-bg.c: (gnome_bg_set_color): use gdk_color_equal() instead of
+	custom colors_equal()
+	Fix bug #566900
+
 ==================== 2.25.4 ====================
 
 ==================== 2.25.3 ====================
